--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-# python 3.10.4 for arm64
-# arm64 Apple M1
-pandas~=1.4.3
-githubdata~=20220817
-mirutil~=20220817.1
+# Python 3.10.5 for arm64
+# Mac OS 12.5
+# Apple M1
